#ifndef TRIP_PLANNER_H
#define TRIP_PLANNER_H

class TripPlanner
{
public:
    TripPlanner();
};

#endif // TRIP_PLANNER_H
